🐛 Fix Gulp to build instead of run the dev server

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
-      - run: gulp
+      - run: gulp build
 
       - name: Commit files
         run: |
