--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: gulp build
-      - run: echo ${{ secrets.GHOST_SEARCH_API_KEY }} > partials/api-key.hbs
+      - run: printf ${{ secrets.GHOST_SEARCH_API_KEY }} > partials/api-key.hbs
       - run: cat partials/api-key.hbs
 
       # Deploy the theme to Ghost using the Admin API key
