--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "digidocs",
-    "description": "Minimal personal blog theme",
+    "name": "OKCTL.io",
+    "description": "Customized version of Digidocs, made for okctl.io",
     "demo": "http://digidocs.gbjsolution.com",
     "version": "2.0.1.3",
     "engines": {
@@ -12,6 +12,10 @@
         "mobile": "assets/screenshot-mobile.jpg"
     },
     "author": {
+        "name": "Oslo Kommune, Team Kjøremiljø",
+        "url": "https://okctl.io"
+    },
+    "originalAuthor": {
         "name": "GBJ solution",
         "email": "gbjsolution@gmail.com",
         "url": "https://gbjsolution.com"
@@ -50,7 +54,7 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.2.5",
-        "browser-sync": "^2.26.14",
+        "browser-sync": "^2.27.0",
         "del": "",
         "gulp": "^4.0.2",
         "gulp-clean-css": "^4.3.0",
