--- a/package.json
+++ b/package.json
@@ -34,6 +34,12 @@
     "config": {
         "posts_per_page": 2,
         "image_sizes": {
+            "xxs": {
+                "width": 30
+            },
+            "xs": {
+                "width": 100
+            },
             "s": {
                 "width": 300
             },
